# pwatch

./: .gitignore  CLAUDE.md  Cargo.toml  README.ja.md  README.md  logo.tape
src/: config.rs  display.rs  main.rs  port.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/tui/: app.rs  handler.rs  ui.rs
