[package]
name = "pwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
comfy-table = "7.2.2"
crossterm = "0.29.0"
figlet-rs = "0.1.5"
nix = { version = "0.31.2", features = ["signal", "process"] }
ratatui = "0.30.0"
serde = "1.0.228"
serde_json = "1.0.149"
